[fixes#72784632] showing no_itinerary_found localized message under each trip part header if nothing is available for it; also not showing legend, Filter containers if empty

--- a/app/assets/stylesheets/default/trips.css.scss
+++ b/app/assets/stylesheets/default/trips.css.scss
@@ -270,6 +270,10 @@ $single-plan-height: 50px;
   height: $single-plan-height;
 }
 
+.trip-part-no-itinerary-alert {
+  text-align: center;
+}
+
 .overlay-mask {
   position: absolute;
   width: 100%;
